force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Applied_Consumption_Rate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Consumption_Rate__c</fullName>
    <formula>FIN_Consumption_Schedule__r.FIN_Applied_Consumption_Rate__r.Price</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Consumption Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>