force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <label>Association Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>