force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Chart_of_Acct_Description__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Acct_Description__c</fullName>
    <formula>IF( FIN_Chart_of_Accounts__r.RecordType.Name = &apos;US Financial Chart of Accounts&apos;, &apos;US Financial Chart of Accounts&apos;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chart of Accounts Description</label>
    <type>Text</type>
</CustomField>