force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Active__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active__c</fullName>
    <formula>TODAY() &gt; SBQQ__EffectiveDate__c &amp;&amp;
TODAY() &lt; SBQQ__ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>