force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_AdvancePayment__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdvancePayment__c</fullName>
    <label>Advance Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>