force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>FIN_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FIN_BusinessUnit__c.FIN_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_BusinessUnit__c</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>