force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_BusinessUnitName__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessUnitName__c</fullName>
    <formula>FIN_Financial_Code__r.FIN_Business_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Name</label>
    <type>Text</type>
</CustomField>