force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Channel__c.field-meta.xml
<CustomField>
    <fullName>FIN_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>