force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Component_Number__c.field-meta.xml
<CustomField>
    <fullName>FIN_Component_Number__c</fullName>
    <inlineHelpText>Indicates what Number the Product Component is within a Context</inlineHelpText>
    <label>Component Key</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>