force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ComponentOf__c.field-meta.xml
<CustomField>
    <fullName>FIN_ComponentOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Of</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Library Associations (Component Of)</relationshipLabel>
    <relationshipName>Library_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>