force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ComponentType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ComponentType__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>CC Add On</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Venue Add On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>