force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Concept_Use__c.field-meta.xml
<CustomField>
    <fullName>FIN_Concept_Use__c</fullName>
    <label>Concept / Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>