force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Consumption_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_Consumption_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>