force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Context__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Library Associations</relationshipLabel>
    <relationshipName>Library_Associations_Context</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>