force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ContextName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextName__c</fullName>
    <formula>FIN_Context__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context name</label>
    <type>Text</type>
</CustomField>