force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ContextNameforSearch__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextNameforSearch__c</fullName>
    <label>Context Name for Search</label>
    <length>250</length>
    <type>Text</type>
</CustomField>