force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Display_Number__c.field-meta.xml
<CustomField>
    <fullName>FIN_Display_Number__c</fullName>
    <label>Display Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>