force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Fee__c.field-meta.xml
<CustomField>
    <fullName>FIN_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>