force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Fee_and_Component__c.field-meta.xml
<CustomField>
    <fullName>FIN_Fee_and_Component__c</fullName>
    <label>Fee and Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXS Fee</fullName>
            </value>
            <value>
                <fullName>AXS Payment Fee</fullName>
            </value>
            <value>
                <fullName>Venue Facility Fee</fullName>
            </value>
            <value>
                <fullName>Venue Fee</fullName>
            </value>
            <value>
                <fullName>Venue Lift</fullName>
            </value>
            <value>
                <fullName>Venue Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>