force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Fee_Category_Temporary__c.field-meta.xml
<CustomField>
    <fullName>FIN_Fee_Category_Temporary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Category (Temporary)</label>
    <referenceTo>FIN_Fee_Category__c</referenceTo>
    <relationshipLabel>Library Associations</relationshipLabel>
    <relationshipName>Library_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>