force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_FeeCompRCC__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeCompRCC__c</fullName>
    <label>Fee Component Revenue Center Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>