force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_FeeCompRCN__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeCompRCN__c</fullName>
    <label>Fee Component Revenue Center Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>