force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_FeeType__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeType__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Convenience Fee</fullName>
            </value>
            <value>
                <fullName>Handling Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>