force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_FinanceManagement__c.field-meta.xml
<CustomField>
    <fullName>FIN_FinanceManagement__c</fullName>
    <label>Financial Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXS Managed</fullName>
            </value>
            <value>
                <fullName>Client Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>