force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Financial_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Financial_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Code</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>FIN_Financial_Code__c.Region__c</field>
            <operation>equals</operation>
            <valueField>$Source.FIN_Region__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FIN_Financial_Code__c</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>