force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_GLCODE__c.field-meta.xml
<CustomField>
    <fullName>FIN_GLCODE__c</fullName>
    <label>GL Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>