force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_LibraryAssociationName__c.field-meta.xml
<CustomField>
    <fullName>FIN_LibraryAssociationName__c</fullName>
    <formula>FIN_Context__r.Name &amp; &apos; - &apos; &amp;  SBQQ__Product__r.Name &amp; &apos; - &apos;&amp;  Text(Association_Type__c) &amp; &apos; &apos; &amp; Text(FIN_Component_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Library Association Name</label>
    <type>Text</type>
</CustomField>