force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_MergingFieldsToCheckForDuplicates__c.field-meta.xml
<CustomField>
    <fullName>FIN_MergingFieldsToCheckForDuplicates__c</fullName>
    <label>Merging Fields to Check for Duplicates</label>
    <length>200</length>
    <type>Text</type>
</CustomField>