force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Payee__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FIN_Payee__c.FIN_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Library Associations</relationshipLabel>
    <relationshipName>Library_Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>