force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Payee_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payee_Legal_Name__c</fullName>
    <formula>FIN_Payee__r.FIN_LegalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remittance Account Legal Name</label>
    <type>Text</type>
</CustomField>