force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_PercentOfTotalProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_PercentOfTotalProduct__c</fullName>
    <label>Percent of Total Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>