force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Product_Type_NUM__c.field-meta.xml
<CustomField>
    <fullName>FIN_Product_Type_NUM__c</fullName>
    <label>Product Type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>