force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ProductName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ProductName__c</fullName>
    <formula>SBQQ__Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>