force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Remark__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remark__c</fullName>
    <formula>&apos;remark&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remark</label>
    <type>Text</type>
</CustomField>