force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Remittance_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remittance_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DELETE Remittance Account</label>
    <referenceTo>FIN_Remittance_Account__c</referenceTo>
    <relationshipLabel>Library Associations</relationshipLabel>
    <relationshipName>Library_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>