force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Remittance_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remittance_Account_Code__c</fullName>
    <formula>FIN_Payee__r.FIN_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remittance Account Code</label>
    <type>Text</type>
</CustomField>