force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Revenue_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenue_Center_Code__c</fullName>
    <formula>FIN_Revenue_Center_Lookup__r.FIN_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Center Code</label>
    <type>Text</type>
</CustomField>