force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Revenue_Center_Lookup__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenue_Center_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Center (Enriched)</label>
    <referenceTo>Revenue_Center__c</referenceTo>
    <relationshipLabel>Library Associations</relationshipLabel>
    <relationshipName>Library_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>