force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_RevenueCenter__c.field-meta.xml
<CustomField>
    <fullName>FIN_RevenueCenter__c</fullName>
    <label>Revenue Center</label>
    <length>250</length>
    <type>Text</type>
</CustomField>