force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Split__c.field-meta.xml
<CustomField>
    <fullName>FIN_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split</label>
    <type>Checkbox</type>
</CustomField>