force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_SplitCount__c.field-meta.xml
<CustomField>
    <fullName>FIN_SplitCount__c</fullName>
    <label>Split Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>