force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_SplitPercentage__c.field-meta.xml
<CustomField>
    <fullName>FIN_SplitPercentage__c</fullName>
    <label>Split Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>