force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Stat_Chart_of_Accounts_Desc__c.field-meta.xml
<CustomField>
    <fullName>FIN_Stat_Chart_of_Accounts_Desc__c</fullName>
    <formula>IF( FIN_Chart_of_Accounts__r.RecordType.Name = &apos;US Statistical Chart of Accounts&apos;, 
&apos;US Statistical Chart of Accounts&apos;, NULL)</formula>
    <label>Statistical Chart of Acct Desc.</label>
    <type>Text</type>
</CustomField>