force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Status__c</fullName>
    <formula>IF (
    ISBLANK(SBQQ__EffectiveDate__c) &amp;&amp; ISBLANK(SBQQ__ExpirationDate__c),
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
    IF (
        NOT(ISBLANK(SBQQ__EffectiveDate__c)) &amp;&amp; NOT(ISBLANK(SBQQ__ExpirationDate__c)) &amp;&amp;
        TODAY()&lt;= SBQQ__ExpirationDate__c &amp;&amp; TODAY()&gt;= SBQQ__EffectiveDate__c,
        IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
        IF (
            NOT(ISBLANK(SBQQ__EffectiveDate__c)) &amp;&amp; ISBLANK(SBQQ__ExpirationDate__c) &amp;&amp; TODAY()&gt;= SBQQ__EffectiveDate__c,
            IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
            IF (
                NOT(ISBLANK(SBQQ__ExpirationDate__c)) &amp;&amp; ISBLANK(SBQQ__EffectiveDate__c) &amp;&amp; TODAY()&lt;= SBQQ__ExpirationDate__c,
                IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;red&apos;) + &apos; Inactive&apos;)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>