force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Subledger__c.field-meta.xml
<CustomField>
    <fullName>FIN_Subledger__c</fullName>
    <formula>MID(FIN_Financial_Code__r.FIN_SubledgerCodeName__c, 3, LEN(FIN_Financial_Code__r.FIN_SubledgerCodeName__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subledger</label>
    <type>Text</type>
</CustomField>