force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Subledger_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Subledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subledger Code</label>
    <referenceTo>FIN_SubledgerCode__c</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>