force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_SubledgerType__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubledgerType__c</fullName>
    <formula>MID(FIN_Financial_Code__r.FIN_SubledgerCodeName__c, 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subledger Type</label>
    <type>Text</type>
</CustomField>