force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>