force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Temp_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Temp_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temp Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Library Associations (Temp Contract)</relationshipLabel>
    <relationshipName>Library_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>