force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_Ticket_price_Component__c.field-meta.xml
<CustomField>
    <fullName>FIN_Ticket_price_Component__c</fullName>
    <label>Ticket Price and Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXS Payment Fee</fullName>
            </value>
            <value>
                <fullName>AXS Premium Fee</fullName>
            </value>
            <value>
                <fullName>AXS Ticket Fee</fullName>
            </value>
            <value>
                <fullName>Venue Delivery Fee</fullName>
            </value>
            <value>
                <fullName>Venue Premium Fee</fullName>
            </value>
            <value>
                <fullName>Venue Ticket Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>