force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_TicketCategories__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketCategories__c</fullName>
    <label>Ticket Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Ticket_Categories_Financial</valueSetName>
    </valueSet>
</CustomField>