force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_TicketCategory_System__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketCategory_System__c</fullName>
    <label>Ticket Category - System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>