force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_TicketType_Primary__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketType_Primary__c</fullName>
    <label>Ticket Type Categories - Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_TicketType_Primary</valueSetName>
    </valueSet>
</CustomField>