force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_TicketTypes_Stat__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketTypes_Stat__c</fullName>
    <label>Ticket Types - Statistical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Ticket_Types_Statistical</valueSetName>
    </valueSet>
</CustomField>