force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ZoneCatagoriesStat__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneCatagoriesStat__c</fullName>
    <label>Zone Categories - Statistical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Zone_Categories_Statistical</valueSetName>
    </valueSet>
</CustomField>