force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ZoneCategories__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneCategories__c</fullName>
    <label>Zone Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Zone_Categories_Financial</valueSetName>
    </valueSet>
</CustomField>