force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/FIN_ZoneType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneType__c</fullName>
    <label>Zone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_ZoneType</valueSetName>
    </valueSet>
</CustomField>