force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Fulfillment_Process__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Process__c</fullName>
    <label>Fulfillment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>