force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <formula>FIN_Company_Code__r.Name &amp;&apos;.&apos;&amp; FIN_Business_Unit__r.Name &amp;&apos;.&apos;&amp;  FIN_Subledger_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>