force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convenience Fee</fullName>
            </value>
            <value>
                <fullName>E-Ticket Fee</fullName>
            </value>
            <value>
                <fullName>Express Delivery Fee</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Handling Fee</fullName>
            </value>
            <value>
                <fullName>NSF Check Fee</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Tix System Package</fullName>
            </value>
            <value>
                <fullName>Tix System Ticket</fullName>
            </value>
            <value>
                <fullName>Merch Product</fullName>
            </value>
            <value>
                <fullName>GREEK Convenience Fee</fullName>
            </value>
            <value>
                <fullName>Box Office Fee</fullName>
            </value>
            <value>
                <fullName>Credit Card Fee</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>Facility Fee</fullName>
            </value>
            <value>
                <fullName>Parking Fee</fullName>
            </value>
            <value>
                <fullName>Promoter Fee</fullName>
            </value>
            <value>
                <fullName>Goldenvoice Fee</fullName>
            </value>
            <value>
                <fullName>AXS Premium Fee</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>GV Handling</fullName>
            </value>
            <value>
                <fullName>Mail Delivery</fullName>
            </value>
            <value>
                <fullName>AXS Premium Fees</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Non-Ticket Product</fullName>
            </value>
            <value>
                <fullName>AEG Internal</fullName>
            </value>
            <value>
                <fullName>Bowery Internal</fullName>
            </value>
            <value>
                <fullName>E-Ticket Fee Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>